# prob-conv

./: CMakeLists.txt  Conv.cu  Conv.cuh  DeltaConv.cu  DeltaConv.cuh  NonZero.cu  NonZero.cuh  PrefixSum.cu  PrefixSum.cuh  StreamIndexCompaction.cuh  Utils.cu  Utils.cuh  main.cu
testdata/: gen.py
